.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/AA__c.field-meta.xml
<CustomField>
    <fullName>AA__c</fullName>
    <label>AA Sector</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rural &amp; Remote</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Health &amp; Hospo</fullName>
            </value>
            <value>
                <fullName>Extrastaff-Internal Recruitment</fullName>
                <isActive>false</isActive>
                <label>Extrastaff-Internal Recruitment</label>
            </value>
            <value>
                <fullName>Internal - Brisbane</fullName>
                <isActive>false</isActive>
                <label>Internal - Brisbane</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>