.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/aa_Credit_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>aa_Credit_Check_Status__c</fullName>
    <label>Credit Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Ready to Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>