.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/aa_Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>aa_Inactive_Reason__c</fullName>
    <label>Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Credit check fail</fullName>
            </value>
            <value>
                <fullName>Terms Expired</fullName>
            </value>
            <value>
                <fullName>Service no longer Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>