.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/aa_Industry_Sector__c.field-meta.xml
<CustomField>
    <fullName>aa_Industry_Sector__c</fullName>
    <label>Industry Sector</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>aa_Industry_Sector_global</valueSetName>
    </valueSet>
</CustomField>