.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/aa_Monash_Model__c.field-meta.xml
<CustomField>
    <fullName>aa_Monash_Model__c</fullName>
    <label>Monash Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MM1</fullName>
            </value>
            <value>
                <fullName>MM2</fullName>
            </value>
            <value>
                <fullName>MM3</fullName>
            </value>
            <value>
                <fullName>MM4</fullName>
            </value>
            <value>
                <fullName>MM5</fullName>
            </value>
            <value>
                <fullName>MM6</fullName>
            </value>
            <value>
                <fullName>MM7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>