.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/aa_Sector_Name__c.field-meta.xml
<CustomField>
    <fullName>aa_Sector_Name__c</fullName>
    <label>Sector Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rural &amp; Remote</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Health &amp; Hospo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>