.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/aa_Services__c.field-meta.xml
<CustomField>
    <fullName>aa_Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered Nurse</fullName>
            </value>
            <value>
                <fullName>Enrolled Nurse</fullName>
            </value>
            <value>
                <fullName>Nursing Assistant</fullName>
            </value>
            <value>
                <fullName>Personal Care Worker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>