.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/aa_TOB_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>aa_TOB_Commencement_Date__c</fullName>
    <inlineHelpText>Both parties have signed the contract and services can commence</inlineHelpText>
    <label>TOB Commencement Date</label>
    <type>Date</type>
</CustomField>