.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/aa_TOB_Current__c.field-meta.xml
<CustomField>
    <fullName>aa_TOB_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Based on current date and expiry date</inlineHelpText>
    <label>TOB Current</label>
    <type>Checkbox</type>
</CustomField>