.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/aa_TOB_on_file_ContractPod__c.field-meta.xml
<CustomField>
    <fullName>aa_TOB_on_file_ContractPod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TOB on file (ContractPod)</label>
    <type>Checkbox</type>
</CustomField>