.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/aa_TOB_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>aa_TOB_Sent_Date__c</fullName>
    <inlineHelpText>To show when the contract has been sent to the client</inlineHelpText>
    <label>TOB Sent Date</label>
    <type>Date</type>
</CustomField>