.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/ACCTYPE__c.field-meta.xml
<CustomField>
    <fullName>ACCTYPE__c</fullName>
    <label>ACCTYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>