.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/ADDR2__c.field-meta.xml
<CustomField>
    <fullName>ADDR2__c</fullName>
    <label>ADDR2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>