.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/ADDR3__c.field-meta.xml
<CustomField>
    <fullName>ADDR3__c</fullName>
    <label>ADDR3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>