.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/AGECALCDATEOPTN__c.field-meta.xml
<CustomField>
    <fullName>AGECALCDATEOPTN__c</fullName>
    <label>AGECALCDATEOPTN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>