.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <inlineHelpText>Defines whether expenses are chargeable to the client, and what the type of charge is.</inlineHelpText>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always Charged - As Paid</fullName>
            </value>
            <value>
                <fullName>Not Charged</fullName>
            </value>
            <value>
                <fullName>On-charge with Margin (%)</fullName>
                <isActive>false</isActive>
                <label>On-charge with Margin (%)</label>
            </value>
            <value>
                <fullName>On-charge with Markup ($)</fullName>
                <isActive>false</isActive>
                <label>On-charge with Markup ($)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>