.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/BUSREGNBR__c.field-meta.xml
<CustomField>
    <fullName>BUSREGNBR__c</fullName>
    <label>BUSREGNBR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>