.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/CHIMPNAME__c.field-meta.xml
<CustomField>
    <fullName>CHIMPNAME__c</fullName>
    <label>CHIMPNAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>