.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/CONTDETAILS__c.field-meta.xml
<CustomField>
    <fullName>CONTDETAILS__c</fullName>
    <label>CONTDETAILS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>