.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/CONTINITS__c.field-meta.xml
<CustomField>
    <fullName>CONTINITS__c</fullName>
    <label>CONTINITS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>