.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/CONTPOSITION__c.field-meta.xml
<CustomField>
    <fullName>CONTPOSITION__c</fullName>
    <label>CONTPOSITION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>