.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/COUNTRYCODE__c.field-meta.xml
<CustomField>
    <fullName>COUNTRYCODE__c</fullName>
    <label>COUNTRYCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>