.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Credit_Check_Complete__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Check Complete?</label>
    <type>Checkbox</type>
</CustomField>