.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/CREDITLIMIT__c.field-meta.xml
<CustomField>
    <fullName>CREDITLIMIT__c</fullName>
    <label>CREDITLIMIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>