.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/CYCLECODE__c.field-meta.xml
<CustomField>
    <fullName>CYCLECODE__c</fullName>
    <label>CYCLECODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>