.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Date_of_Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Credit_Check__c</fullName>
    <label>Date of Credit Check</label>
    <type>Date</type>
</CustomField>