.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DDAPPRLIMITAMT__c.field-meta.xml
<CustomField>
    <fullName>DDAPPRLIMITAMT__c</fullName>
    <label>DDAPPRLIMITAMT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>