.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DDAPPRLIMITIND__c.field-meta.xml
<CustomField>
    <fullName>DDAPPRLIMITIND__c</fullName>
    <label>DDAPPRLIMITIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>