.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DDAPPROVEDIND__c.field-meta.xml
<CustomField>
    <fullName>DDAPPROVEDIND__c</fullName>
    <label>DDAPPROVEDIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>