.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DDBNKAPPRCODE__c.field-meta.xml
<CustomField>
    <fullName>DDBNKAPPRCODE__c</fullName>
    <label>DDBNKAPPRCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>