.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DDENDDATE__c.field-meta.xml
<CustomField>
    <fullName>DDENDDATE__c</fullName>
    <label>DDENDDATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>