.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DDONHOLDDATE__c.field-meta.xml
<CustomField>
    <fullName>DDONHOLDDATE__c</fullName>
    <label>DDONHOLDDATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>