.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DDONHOLDIND__c.field-meta.xml
<CustomField>
    <fullName>DDONHOLDIND__c</fullName>
    <label>DDONHOLDIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>