.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DDONHOLDREAS__c.field-meta.xml
<CustomField>
    <fullName>DDONHOLDREAS__c</fullName>
    <label>DDONHOLDREAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>