.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DDSTARTDATE__c.field-meta.xml
<CustomField>
    <fullName>DDSTARTDATE__c</fullName>
    <label>DDSTARTDATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>