.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DDSUPPRESSADVICEIND__c.field-meta.xml
<CustomField>
    <fullName>DDSUPPRESSADVICEIND__c</fullName>
    <label>DDSUPPRESSADVICEIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>