.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DEBTGROUP__c.field-meta.xml
<CustomField>
    <fullName>DEBTGROUP__c</fullName>
    <label>DEBTGROUP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>