.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DEBTSTATUS__c.field-meta.xml
<CustomField>
    <fullName>DEBTSTATUS__c</fullName>
    <label>DEBTSTATUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>