.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Default_Invoice_Entity__c.field-meta.xml
<CustomField>
    <fullName>Default_Invoice_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Invoice Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Invoice Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Default Invoice Entity)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>