.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Default_Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Payment Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Payment Entity</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>