.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Default_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Default Payment Terms for this Invoice Entity</inlineHelpText>
    <label>Default Payment Terms</label>
    <referenceTo>tc9_et__Payment_Terms__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>