.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DISCDAYS__c.field-meta.xml
<CustomField>
    <fullName>DISCDAYS__c</fullName>
    <label>DISCDAYS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>