.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DISCPERC__c.field-meta.xml
<CustomField>
    <fullName>DISCPERC__c</fullName>
    <label>DISCPERC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>