.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC1DDFEMAILATT__c.field-meta.xml
<CustomField>
    <fullName>DOC1DDFEMAILATT__c</fullName>
    <label>DOC1DDFEMAILATT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>