.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC1DDFEMAILIND__c.field-meta.xml
<CustomField>
    <fullName>DOC1DDFEMAILIND__c</fullName>
    <label>DOC1DDFEMAILIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>