.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC1DDFEMAILQUOCHAR__c.field-meta.xml
<CustomField>
    <fullName>DOC1DDFEMAILQUOCHAR__c</fullName>
    <label>DOC1DDFEMAILQUOCHAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>