.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC1DDFEMAILSEPCHAR__c.field-meta.xml
<CustomField>
    <fullName>DOC1DDFEMAILSEPCHAR__c</fullName>
    <label>DOC1DDFEMAILSEPCHAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>