.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC1DDFEXPTIND__c.field-meta.xml
<CustomField>
    <fullName>DOC1DDFEXPTIND__c</fullName>
    <label>DOC1DDFEXPTIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>