.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC1DDFFAXIND__c.field-meta.xml
<CustomField>
    <fullName>DOC1DDFFAXIND__c</fullName>
    <label>DOC1DDFFAXIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>