.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC1DDFIND__c.field-meta.xml
<CustomField>
    <fullName>DOC1DDFIND__c</fullName>
    <label>DOC1DDFIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>