.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC1DDFPRINTIND__c.field-meta.xml
<CustomField>
    <fullName>DOC1DDFPRINTIND__c</fullName>
    <label>DOC1DDFPRINTIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>