.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC1DEFADDRCODE__c.field-meta.xml
<CustomField>
    <fullName>DOC1DEFADDRCODE__c</fullName>
    <label>DOC1DEFADDRCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>