.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC2DDFEMAILATT__c.field-meta.xml
<CustomField>
    <fullName>DOC2DDFEMAILATT__c</fullName>
    <label>DOC2DDFEMAILATT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>