.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC2DDFEMAILIND__c.field-meta.xml
<CustomField>
    <fullName>DOC2DDFEMAILIND__c</fullName>
    <label>DOC2DDFEMAILIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>