.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC2DDFEMAILQUOCHAR__c.field-meta.xml
<CustomField>
    <fullName>DOC2DDFEMAILQUOCHAR__c</fullName>
    <label>DOC2DDFEMAILQUOCHAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>