.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC2DDFEMAILSEPCHAR__c.field-meta.xml
<CustomField>
    <fullName>DOC2DDFEMAILSEPCHAR__c</fullName>
    <label>DOC2DDFEMAILSEPCHAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>