.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC2DDFEXPTIND__c.field-meta.xml
<CustomField>
    <fullName>DOC2DDFEXPTIND__c</fullName>
    <label>DOC2DDFEXPTIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>