.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC2DDFFAXIND__c.field-meta.xml
<CustomField>
    <fullName>DOC2DDFFAXIND__c</fullName>
    <label>DOC2DDFFAXIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>