.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC2DDFIND__c.field-meta.xml
<CustomField>
    <fullName>DOC2DDFIND__c</fullName>
    <label>DOC2DDFIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>