.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC2DDFPRINTIND__c.field-meta.xml
<CustomField>
    <fullName>DOC2DDFPRINTIND__c</fullName>
    <label>DOC2DDFPRINTIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>