.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC2DEFADDRCODE__c.field-meta.xml
<CustomField>
    <fullName>DOC2DEFADDRCODE__c</fullName>
    <label>DOC2DEFADDRCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>