.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC3DDFEMAILATT__c.field-meta.xml
<CustomField>
    <fullName>DOC3DDFEMAILATT__c</fullName>
    <label>DOC3DDFEMAILATT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>