.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC3DDFEMAILIND__c.field-meta.xml
<CustomField>
    <fullName>DOC3DDFEMAILIND__c</fullName>
    <label>DOC3DDFEMAILIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>