.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC3DDFEMAILQUOCHAR__c.field-meta.xml
<CustomField>
    <fullName>DOC3DDFEMAILQUOCHAR__c</fullName>
    <label>DOC3DDFEMAILQUOCHAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>