.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC3DDFEMAILSEPCHAR__c.field-meta.xml
<CustomField>
    <fullName>DOC3DDFEMAILSEPCHAR__c</fullName>
    <label>DOC3DDFEMAILSEPCHAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>