.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC3DDFEXPTIND__c.field-meta.xml
<CustomField>
    <fullName>DOC3DDFEXPTIND__c</fullName>
    <label>DOC3DDFEXPTIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>