.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC3DDFFAXIND__c.field-meta.xml
<CustomField>
    <fullName>DOC3DDFFAXIND__c</fullName>
    <label>DOC3DDFFAXIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>