.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC3DDFIND__c.field-meta.xml
<CustomField>
    <fullName>DOC3DDFIND__c</fullName>
    <label>DOC3DDFIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>