.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC3DDFPRINTIND__c.field-meta.xml
<CustomField>
    <fullName>DOC3DDFPRINTIND__c</fullName>
    <label>DOC3DDFPRINTIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>