.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DOC3DEFADDRCODE__c.field-meta.xml
<CustomField>
    <fullName>DOC3DEFADDRCODE__c</fullName>
    <label>DOC3DEFADDRCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>