.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DRAWBANK__c.field-meta.xml
<CustomField>
    <fullName>DRAWBANK__c</fullName>
    <label>DRAWBANK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>