.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DRAWBRANCH__c.field-meta.xml
<CustomField>
    <fullName>DRAWBRANCH__c</fullName>
    <label>DRAWBRANCH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>