.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/DRAWNAME__c.field-meta.xml
<CustomField>
    <fullName>DRAWNAME__c</fullName>
    <label>DRAWNAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>