.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/ENQCOMMENT1__c.field-meta.xml
<CustomField>
    <fullName>ENQCOMMENT1__c</fullName>
    <label>ENQCOMMENT1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>