.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/ENQCOMMENT2__c.field-meta.xml
<CustomField>
    <fullName>ENQCOMMENT2__c</fullName>
    <label>ENQCOMMENT2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>