.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/ENQCOMMENT3__c.field-meta.xml
<CustomField>
    <fullName>ENQCOMMENT3__c</fullName>
    <label>ENQCOMMENT3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>