.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/FRGNCCYIN__c.field-meta.xml
<CustomField>
    <fullName>FRGNCCYIN__c</fullName>
    <label>FRGNCCYIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>