.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/General_Pay_Advice_Message__c.field-meta.xml
<CustomField>
    <fullName>General_Pay_Advice_Message__c</fullName>
    <inlineHelpText>Information entered will appear under the &apos;General Message&apos; on the custom H&amp;C Pay Advice.</inlineHelpText>
    <label>General Pay Advice Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>