.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Oncost_Margin__c.field-meta.xml
<CustomField>
    <fullName>Oncost_Margin__c</fullName>
    <inlineHelpText>Allows for setting a margin percentage to be applied to on-charged expenses (dependent picklist with Approval Type).</inlineHelpText>
    <label>Oncost/Margin</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>