.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Oncost_Markup__c.field-meta.xml
<CustomField>
    <fullName>Oncost_Markup__c</fullName>
    <inlineHelpText>Allows for setting a specific markup to be applied to on-charged expenses (dependent picklist with Approval Type)</inlineHelpText>
    <label>Oncost/Markup</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>