.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Original_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Activation_Date__c</fullName>
    <description>The date the Account record was first set to Active Status</description>
    <inlineHelpText>The date the Account record was first set to Active Status</inlineHelpText>
    <label>Original Activation Date</label>
    <type>Date</type>
</CustomField>