.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Payment_Entity_Email__c.field-meta.xml
<CustomField>
    <fullName>Payment_Entity_Email__c</fullName>
    <inlineHelpText>Displayed on the statement of service</inlineHelpText>
    <label>Payment Entity Email</label>
    <type>Email</type>
</CustomField>