.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Payroll_Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Tax_Exempt__c</fullName>
    <label>Payroll Tax Exempt?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes - Workcover Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>