.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Payroll_Tax_Exempt_Reason__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Tax_Exempt_Reason__c</fullName>
    <label>Payroll Tax Exempt Reason</label>
    <type>TextArea</type>
</CustomField>