.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/POSTNAME__c.field-meta.xml
<CustomField>
    <fullName>POSTNAME__c</fullName>
    <label>POSTNAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>