.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Primary_Approval_Method__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approval_Method__c</fullName>
    <label>Primary Approval Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIN and Signature</fullName>
                <default>true</default>
                <label>PIN and Signature</label>
            </value>
            <value>
                <fullName>PIN Only</fullName>
            </value>
            <value>
                <fullName>Signature Only</fullName>
            </value>
            <value>
                <fullName>Offline Timesheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>