.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Primary_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Client Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primary Client Contact)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>