.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/RECEIPTMETHOD__c.field-meta.xml
<CustomField>
    <fullName>RECEIPTMETHOD__c</fullName>
    <label>RECEIPTMETHOD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>