.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Retrigger_Invoice_Settings__c.field-meta.xml
<CustomField>
    <fullName>Retrigger_Invoice_Settings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retrigger Invoice Settings</label>
    <type>Checkbox</type>
</CustomField>