.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/SELNCODE1__c.field-meta.xml
<CustomField>
    <fullName>SELNCODE1__c</fullName>
    <label>SELNCODE1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>