.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/SELNCODE3__c.field-meta.xml
<CustomField>
    <fullName>SELNCODE3__c</fullName>
    <label>SELNCODE3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>