.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/SELNCODE4__c.field-meta.xml
<CustomField>
    <fullName>SELNCODE4__c</fullName>
    <label>SELNCODE4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>