.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Shiftmatch_Counter__c.field-meta.xml
<CustomField>
    <fullName>Shiftmatch_Counter__c</fullName>
    <label>Shiftmatch Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>