.vscode/allianceuat_compare/force-app/main/default/objects/Account/fields/Shiftmatch_Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Shiftmatch_Last_Sync_Date__c</fullName>
    <label>Shiftmatch Last Sync Date</label>
    <type>DateTime</type>
</CustomField>